@@ -16,31 +16,29 @@
 <%args>
    @redirections
 </%args>
-Include /etc/apache2/mods-available/proxy.load
-Include /etc/apache2/mods-available/proxy_http.load
-
-<IfModule mod_proxy.c>
-   ProxyRequests Off
-   ProxyVia      On
-
-<IfModule mod_rewrite.c>
 % foreach my $redir (@redirections) {
-   RewriteCond %{HTTP:Via}    .
-   RewriteRule /<% $redir->{url} %>(.*) <% $redir->{target} %>$1 [P,L]
-  
-   ProxyPassReverse /<% $redir->{url} %> <% $redir->{target} %>
-
-%   if ($redir->{absolute_url_patterns}) {  
-   RewriteCond %{HTTP:Via}    .
-%      my ($i, $nElem) = (1, scalar(@{$redir->{absolute_url_patterns}}) );
-%      foreach my $pattern (@{$redir->{absolute_url_patterns}}) {
-%         my $pattern_or = $pattern . (($i < $nElem) ? ' [OR]' : "");
-   RewriteCond %{REQUEST_URI} <% $pattern_or %>
-%         $i++;
-%      }
-   RewriteRule /(.*) <% $redir->{target} %>/$1 [P,L]
+  location /<% $redir->{url} %> {
+     proxy_redirect off;
+     proxy_set_header Host $host;
+     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+     if ($http_x_ssl_client_used) {
+        rewrite /<% $redir->{url} %>/(.*) /$1 break;
+        proxy_pass <% $redir->{target} %>;
+        break;
+     }
+     return 404;
+  }
+%   if ($redir->{absolute_url_patterns}) {
+%      my $absPatterns = join(' ', @{$redir->{absolute_url_patterns}});  
+  location ~ <% $absPatterns %> {
+     proxy_redirect off;
+     proxy_set_header Host $host;
+     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+     if ($http_x_ssl_client_used) {
+        proxy_pass <% $redir->{target} %>;
+        break;
+     }
+     return 404;
+  }
 %   }
-
 % }
-</IfModule>
-</IfModule>
